[package]
name = "cue-sys"
description = "Bindings for the libcue library"
homepage = "https://github.com/mistydemeo/libcue.rs"
repository = "https://github.com/mistydemeo/libcue.rs"
keywords = ["cd", "cd-rom", "cue_sheet"]
categories = ["external-ffi-bindings", "parser-implementations"]
version = "1.0.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
license = "GPL-2.0-or-later"

[dependencies]
libc = "0.2.40"
