[package]
name = "cue-sys"
description = "Bindings for the libcue library"
homepage = "https://github.com/mistydemeo/libcue.rs"
repository = "https://github.com/mistydemeo/libcue.rs"
keywords = ["cd", "cd-rom", "compact_disc", "cue_sheet", "libcue"]
categories = ["external-ffi-bindings", "parser-implementations"]
version = "1.0.0"
authors = ["Misty De Meo <mistydemeo@gmail.com>"]
license = "GPL-2.0"

[dependencies]
libc = "0.2.40"
